# gaia

./: .gitattributes  .gitignore  CLAUDE.md  context7.json
.devin/: wiki.json
.github/workflows/: build-installers.yml  claude.yml  merge-queue-notify.yml  publish.yml
cpp/: CMakeLists.txt
cpp/benchmarks/: mock_llm_server.h
cpp/examples/: vlm_agent.cpp
cpp/include/gaia/: agent.h  types.h
cpp/src/: agent.cpp  clean_console.cpp  image.cpp  json_utils.cpp  types.cpp
cpp/tests/: test_agent_vlm.cpp  test_image.cpp  test_types.cpp
cpp/tests/integration/: test_integration_llm.cpp  test_integration_vlm.cpp  test_main.cpp
cpp/tests/support/: mock_llm_server.h
docs/: docs.json
docs/cpp/: api-reference.mdx  custom-agent.mdx  overview.mdx  quickstart.mdx
docs/deployment/: ui.mdx
docs/guides/: custom-agent.mdx
docs/plans/: axis-gaia-integration.md  email-triage-agent.mdx
docs/playbooks/custom-installer/: index.mdx
docs/presentations/: email-calendar-integration.html
docs/reference/: cli.mdx  faq.mdx  troubleshooting.mdx
docs/releases/: v0.17.3.mdx  v0.17.4.mdx
docs/spec/: multi-agent-architecture.md  small-business-agent-team.md
installer/nsis/: installer.nsh
installer/scripts/: after-pack.cjs
src/gaia/: cli.py  util.py  version.py
src/gaia/agents/tools/: file_tools.py
src/gaia/apps/webui/: electron-builder.yml  main.cjs  package.json
src/gaia/apps/webui/services/: agent-seeder.cjs  backend-installer.cjs  port-manager.cjs
src/gaia/apps/webui/src/components/: CustomAgentsSection.tsx  FileBrowser.tsx  MessageBubble.css  SettingsModal.tsx
src/gaia/apps/webui/src/services/: api.ts
src/gaia/apps/webui/src/utils/: apiBase.ts
src/gaia/installer/: export_import.py  lemonade_installer.py
src/gaia/llm/: lemonade_client.py
src/gaia/mcp/: mcp_bridge.py
src/gaia/rag/: sdk.py
src/gaia/ui/: _chat_helpers.py  database.py  document_monitor.py  server.py  sse_handler.py
src/gaia/ui/routers/: agents.py  system.py
tests/: test_rag.py
tests/electron/: agent-seeder.test.cjs  appimage-smoke.test.mjs  package.json  test_custom_agents_section.js  test_electron_chat_app.js  test_electron_chat_installer.js  test_port_manager.mjs
tests/electron/fixtures/: Dockerfile.fedora-41  Dockerfile.ubuntu-24-minimal
tests/integration/: test_chat_ui_integration.py
tests/unit/: test_export_import.py  test_file_tools.py  test_init_command.py  test_server_root_html.py
tests/unit/chat/ui/: test_agent_model_override.py  test_agents_router.py  test_chat_helpers_model_resolution.py  test_sse_handler.py
tests/unit/installer/: test_uninstall_command.py
